# squad-agents

./: .gitignore  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  Cagent-dev.claudeclaude-agent-sdlc.local.md  GEMINI.md  README.md  UsersPCAppDataLocalTempclaudec--agent-dev419e61fa-d9b8-4adc-a3bf-acee5d6325f8scratchpadtest_rolling_summary.md  eslint.config.js  glossary.md  package-lock.json  package.json  pyproject.toml  settings.json
.brainstorm/: new-agent-skills-brainstorming.memlog.md
.claude/: bugs-audit-2026-06-01.md  settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.simulate/: observer.py
agents/: coder.md  conflict-resolver.md  detective.md  diff-reviewer.md  documenter.md  explorer.md  implementer.md  quality-reviewer.md  researcher.md  reviewer.md  spec-reviewer.md
commands/: artifact-review.md  check.md  debug.md  deliver.md  docs.md  eval.md  new.md  plan.md  refactor.md  test.md  welcome.md
hooks/: git-guard.sh  hooks.json  lib.sh  runner.mjs  runner.test.mjs  shell-safety.sh  skill-nudge.sh  utils.mjs
monitors/: monitors.json
output-styles/: agent-dev.md  agent-sdlc.md  squad-agents.md
plan/: agent-sdlc-gaps.plan.md  agent-sdlc-gaps.specs.md  codebase-init-updater.plan.md  codebase-init-updater.review.md  codebase-init-updater.specs.md  dispatch-agents.plan.md  dispatch-agents.specs.md  hooks-audit-fixes.plan.md  hooks-audit-fixes.specs.md  ponytail-audit.plan.md  ponytail-audit.specs.md  refactor-planning-skill-1.md  skill-audit-remediation.plan.md  skill-audit-remediation.review.md  (+5 more)
(+421 files in other folders)
