[project]
name = "squad-agents"
version = "0.1.0"
description = "Claude Code plugin for agent development and testing"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = [
    "skills",
]
addopts = "-v"

[tool.ruff]
line-length = 88
target-version = "py310"
